--- a/11_TippingTable3/11_TippingTable3.csproj
+++ b/11_TippingTable3/11_TippingTable3.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6AFD2B62-8223-4E63-AE6D-87A65A4C0664}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_11_TippingTable3</RootNamespace>
-    <AssemblyName>_11_TippingTable3</AssemblyName>
+    <AssemblyName>11_TippingTable3</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="TippingTable3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
