--- a/14_GuessingGame2/14_GuessingGame2.csproj
+++ b/14_GuessingGame2/14_GuessingGame2.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0B15FB24-E088-4C30-AD5B-AEE9CDC20236}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_14_GuessingGame2</RootNamespace>
-    <AssemblyName>_14_GuessingGame2</AssemblyName>
+    <AssemblyName>14_GuessingGame2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="GuessingGame2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
